--- a/.mutt/imap.conf
+++ b/.mutt/imap.conf
@@ -1,5 +1,5 @@
-set folder="imaps://zhaozhou:sanotehul'r,c.gp@lunix.se/INBOX"
-set spoolfile="imaps://zhaozhou:sanotehul'r,c.gp@lunix.se/INBOX"
+set folder="imaps://zhaozhou:PASS@lunix.se/INBOX"
+set spoolfile="imaps://zhaozhou:PASS@lunix.se/INBOX"
 mailboxes imaps://lunix.se/INBOX
 
 # vim: set syntax=muttrc: 
