--- a/openvpn/client.conf
+++ b/openvpn/client.conf
@@ -7,8 +7,8 @@ pull
 
 comp-lzo
 
-dh /home/zhaozhou/.cert/dh2048.pem
-ca /home/zhaozhou/.cert/ca.crt
-cert /home/zhaozhou/.cert/inject.crt
-key /home/zhaozhou/.cert/inject.key
+dh /home/dbe/.cert/dh2048.pem
+ca /home/dbe/.cert/ca.crt
+cert /home/dbe/.cert/inject.crt
+key /home/dbe/.cert/inject.key
 
