--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule ".vim/bundle/vim-powerline"]
 	path = .vim/bundle/vim-powerline
 	url = git://github.com/Lokaltog/vim-powerline
+[submodule ".tmuxified"]
+	path = .tmuxified
+	url = git://github.com/dbeecham/tmuxified
