Pentadactyl to use google, disable tabs and other stuff. zsh to set xterm-256color.

--- a/.pentadactylrc
+++ b/.pentadactylrc
@@ -2,3 +2,6 @@ set autocomplete=
 map -builtin j 12j
 map -builtin k 12k
 colorscheme simple_dark
+set defsearch=google
+set guioptions=s
+set showtabline=never
