--- a/.pentadactylrc
+++ b/.pentadactylrc
@@ -3,5 +3,4 @@ map -builtin j 12j
 map -builtin k 12k
 colorscheme simple_dark
 set defsearch=google
-set guioptions=s
-set showtabline=never
+set guioptions=bCrsT
