tmux: Revamped; dwm-like bindings (buggy at the moment)

--- a/.tmux/bindings.conf
+++ b/.tmux/bindings.conf
@@ -19,7 +19,6 @@ unbind-key -a
 # Change prefix to ctrl-a
 set-option -g prefix C-a
 
-
 # C-a C-a -> last window
 bind-key C-a last-window
 
@@ -27,10 +26,16 @@ bind-key C-a last-window
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 # select-pane selects panes. -DLRU is down, left, right and up. -l is last.
-bind -n M-l select-pane -L
-bind -n M-k select-pane -U
-bind -n M-j select-pane -D
-bind -n M-h select-pane -R
+#bind -n M-l select-pane -L
+#bind -n M-k select-pane -U
+#bind -n M-j select-pane -D
+#bind -n M-h select-pane -R
+
+bind -n M-l run-shell "SIZE=$(tmux showw main-pane-width | cut -d ' ' -f 2); tmux setw main-pane-width $((SIZE+3)) >> /dev/null; tmux resize-pane -R -t 0 3"
+bind -n M-h run-shell "SIZE=$(tmux showw main-pane-width | cut -d ' ' -f 2); tmux setw main-pane-width $((SIZE-3)) >> /dev/null; tmux resize-pane -L -t 0 3"
+
+bind -n M-j run-shell "MAX=#{window_panes}; CURRENT=#{pane_index}; tmux select-pane -t $(((CURRENT+1)%(MAX)))"
+bind -n M-k run-shell "MAX=#{window_panes}; CURRENT=#{pane_index}; tmux select-pane -t $(((CURRENT+MAX-1)%(MAX)))"
 
 # Splitting window
 bind -n M-b split-window -h
@@ -42,11 +47,13 @@ bind -n M-t select-layout main-vertical
 # swap a'la dwm
 bind -n M-Enter swap-pane -t 0 \; select-pane -t 0
 
+bind -n C-x kill-pane \; select-layout main-vertical
+
 # new terminal a'la dwm
 bind -n M-Space split-window \; select-layout main-vertical
 
 # rename window
-bind n command-prompt "rename-session "
+bind n command-prompt -I "#{window_name}" "rename-window '%%'"
 
 bind ":" command-prompt
 
