nvim and tmux bindings changes

--- a/.tmux/bindings.conf
+++ b/.tmux/bindings.conf
@@ -1,6 +1,18 @@
 # Unbind all keys
 unbind-key -a
 
+# Ctrl is "C-" or "^", alt (meta) is "M-", shift is "S-".
+# Special key names: Up, Down, Left, Right, BSpace, BTab, DC (delete), End,
+# Enter, Escape, F1-F20, Home, IC (insert), NPage/PageDown/PgDn,
+# PPage/PageUp/PgUp, Space and Tab.
+# For " and ', quotations marks are necessary, e.g:
+# bind-key '"' split-window
+# bind-key "'" new-window
+# if -n is specified, command is bound to key alone, without prefix.
+
+# Change prefix to ctrl-a
+set-option -g prefix C-a
+
 # turns on vi-mode in copy and choice modes
 #mode-keys vi
 
@@ -16,14 +28,18 @@ unbind-key -a
 # bind-key "'" new-window
 # if -n is specified, command is bound to key alone, without prefix.
 
-# Change prefix to ctrl-a
-set-option -g prefix C-a
-
 # C-a C-a -> last window
 bind-key C-a last-window
 
 # reload config
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
+
+# Smart pane switching with awareness of vim splits
+is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
+bind -n M-h if-shell "$is_vim" "send-keys M-h" "select-pane -L"
+bind -n M-j if-shell "$is_vim" "send-keys M-j" "select-pane -D"
+bind -n M-k if-shell "$is_vim" "send-keys M-k" "select-pane -U"
+bind -n M-l if-shell "$is_vim" "send-keys M-l" "select-pane -R"
 
 # select-pane selects panes. -DLRU is down, left, right and up. -l is last.
 #bind -n M-l select-pane -L
@@ -31,11 +47,11 @@ bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 #bind -n M-j select-pane -D
 #bind -n M-h select-pane -R
 
-bind -n M-l run-shell "SIZE=$(tmux showw main-pane-width | cut -d ' ' -f 2); tmux setw main-pane-width $((SIZE+3)) >> /dev/null; tmux resize-pane -R -t 0 3"
-bind -n M-h run-shell "SIZE=$(tmux showw main-pane-width | cut -d ' ' -f 2); tmux setw main-pane-width $((SIZE-3)) >> /dev/null; tmux resize-pane -L -t 0 3"
+#bind -n M-l run-shell "SIZE=$(tmux showw main-pane-width | cut -d ' ' -f 2); tmux setw main-pane-width $((SIZE+3)) >> /dev/null; tmux resize-pane -R -t 0 3"
+#bind -n M-h run-shell "SIZE=$(tmux showw main-pane-width | cut -d ' ' -f 2); tmux setw main-pane-width $((SIZE-3)) >> /dev/null; tmux resize-pane -L -t 0 3"
 
-bind -n M-j run-shell "MAX=#{window_panes}; CURRENT=#{pane_index}; tmux select-pane -t $(((CURRENT+1)%(MAX)))"
-bind -n M-k run-shell "MAX=#{window_panes}; CURRENT=#{pane_index}; tmux select-pane -t $(((CURRENT+MAX-1)%(MAX)))"
+#bind -n M-j run-shell "MAX=#{window_panes}; CURRENT=#{pane_index}; tmux select-pane -t $(((CURRENT+1)%(MAX)))"
+#bind -n M-k run-shell "MAX=#{window_panes}; CURRENT=#{pane_index}; tmux select-pane -t $(((CURRENT+MAX-1)%(MAX)))"
 
 # Splitting window
 bind -n M-b split-window -h
@@ -45,7 +61,7 @@ bind -n M-v split-window -v
 bind -n M-t select-layout main-vertical
 
 # swap a'la dwm
-bind -n M-Enter swap-pane -t 0 \; select-pane -t 0
+#bind -n C-Enter swap-pane -t 0 \; select-pane -t 0
 
 bind -n C-x kill-pane \; select-layout main-vertical
 
@@ -54,8 +70,6 @@ bind -n M-Space split-window \; select-layout main-vertical
 
 # rename window
 bind n command-prompt -I "#{window_name}" "rename-window '%%'"
-
-bind ":" command-prompt
 
 bind -n M-1 run-shell "tmux select-window -t 1 >> /dev/null; if test \$? = 1; then tmux new-window -t 1; fi"
 bind -n M-2 run-shell "tmux select-window -t 2 >> /dev/null; if test \$? = 1; then tmux new-window -t 2; fi"
@@ -67,6 +81,4 @@ bind -n M-7 run-shell "tmux select-window -t 7 >> /dev/null; if test \$? = 1; th
 bind -n M-8 run-shell "tmux select-window -t 8 >> /dev/null; if test \$? = 1; then tmux new-window -t 8; fi"
 bind -n M-9 run-shell "tmux select-window -t 9 >> /dev/null; if test \$? = 1; then tmux new-window -t 9; fi"
 
-# select window by index
-# select-window -target target-window
-bind -n M-1 select-window -t 1
+bind ":" command-prompt
