--- a/.tmux/environment.conf
+++ b/.tmux/environment.conf
@@ -10,6 +10,9 @@ set -g default-terminal "screen-256color"
 
 # Mouse mode allows scrolling in tmux.
 set -g mode-mouse on
+set -g mouse-resize-pane on
+set -g mouse-select-pane on
+set -g mouse-select-window on
 
 # Rather than constraining window size to the maximum size of any client 
 # connected to the *session*, constrain window size to the maximum size of any 
