--- a/.tmux/environment.conf
+++ b/.tmux/environment.conf
@@ -21,6 +21,7 @@ setw -g aggressive-resize on
 
 # Activity monitoring. Windows with activity are highlighted in the status bar.
 setw -g monitor-activity on
+setw -g monitor-silence 3
 
 # Start numbering at 1
 set -g base-index 1
@@ -29,37 +30,3 @@ set -g base-index 1
 # if it is part of a function or meta key sequences. I don't use these, and tmux
 # feels unresponsive with it.
 set -s escape-time 0
-
-
-##########
-# COLORS #
-##########
-
-# default window title colors
-#set-window-option -g window-status-fg colour244 #base0
-#set-window-option -g window-status-bg default
-#set-window-option -g window-status-attr dim
-
-# active window title colors
-#set-window-option -g window-status-current-fg colour166 #orange
-#set-window-option -g window-status-current-bg default
-#set-window-option -g window-status-current-attr bright
-
-# pane border
-#set-option -g pane-border-fg colour235 #base02
-#set-option -g pane-active-border-fg colour240 #base01
-
-# message text
-#set-option -g message-bg colour235 #base02
-#set-option -g message-fg colour166 #orange
-
-# pane number display
-#set-option -g display-panes-active-colour colour33 #blue
-#set-option -g display-panes-colour colour166 #orange
-# clock
-#set-window-option -g clock-mode-colour green #green
-
-# https://github.com/seebi/tmux-colors-solarized/blob/master/tmuxcolors-256.conf
-#set-option -g status-bg colour235 #base02
-#set-option -g status-fg colour136 #yellow
-#set-option -g status-attr default
