Changed split bindings in tmux and vim

--- a/.tmux/bindings.conf
+++ b/.tmux/bindings.conf
@@ -55,7 +55,7 @@ bind -n M-l if-shell "$is_vim" "send-keys M-l" "select-pane -R"
 
 # Splitting window
 bind -n M-b split-window -h
-bind -n M-v split-window -v
+bind -n M-g split-window -v
 
 # tile windows
 bind -n M-t select-layout main-vertical
