tmux changed some configuration options for mouse

--- a/.tmux/environment.conf
+++ b/.tmux/environment.conf
@@ -9,10 +9,11 @@ set-option -g status-utf8 on
 set -g default-terminal "screen-256color"
 
 # Mouse mode allows scrolling in tmux.
-set -g mode-mouse on
-set -g mouse-resize-pane on
-set -g mouse-select-pane on
-set -g mouse-select-window on
+#set -g mode-mouse on
+#set -g mouse-resize-pane on
+#set -g mouse-select-pane on
+#set -g mouse-select-window on
+set -g mouse on
 
 # Rather than constraining window size to the maximum size of any client 
 # connected to the *session*, constrain window size to the maximum size of any 
