Having issues with alt-key in tmux, it's not always recognized.

--- a/.tmux/bindings.conf
+++ b/.tmux/bindings.conf
@@ -41,21 +41,28 @@ bind -n M-j if-shell "$is_vim" "send-keys M-j" "select-pane -D"
 bind -n M-k if-shell "$is_vim" "send-keys M-k" "select-pane -U"
 bind -n M-l if-shell "$is_vim" "send-keys M-l" "select-pane -R"
 
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+
 # select-pane selects panes. -DLRU is down, left, right and up. -l is last.
-#bind -n M-l select-pane -L
-#bind -n M-k select-pane -U
-#bind -n M-j select-pane -D
-#bind -n M-h select-pane -R
+#bind -n A-l select-pane -L
+#bind -n A-k select-pane -U
+#bind -n A-j select-pane -D
+#bind -n A-h select-pane -R
 
-#bind -n M-l run-shell "SIZE=$(tmux showw main-pane-width | cut -d ' ' -f 2); tmux setw main-pane-width $((SIZE+3)) >> /dev/null; tmux resize-pane -R -t 0 3"
-#bind -n M-h run-shell "SIZE=$(tmux showw main-pane-width | cut -d ' ' -f 2); tmux setw main-pane-width $((SIZE-3)) >> /dev/null; tmux resize-pane -L -t 0 3"
+#bind -n A-l run-shell "SIZE=$(tmux showw main-pane-width | cut -d ' ' -f 2); tmux setw main-pane-width $((SIZE+3)) >> /dev/null; tmux resize-pane -R -t 0 3"
+#bind -n A-h run-shell "SIZE=$(tmux showw main-pane-width | cut -d ' ' -f 2); tmux setw main-pane-width $((SIZE-3)) >> /dev/null; tmux resize-pane -L -t 0 3"
 
-#bind -n M-j run-shell "MAX=#{window_panes}; CURRENT=#{pane_index}; tmux select-pane -t $(((CURRENT+1)%(MAX)))"
-#bind -n M-k run-shell "MAX=#{window_panes}; CURRENT=#{pane_index}; tmux select-pane -t $(((CURRENT+MAX-1)%(MAX)))"
+#bind -n A-j run-shell "MAX=#{window_panes}; CURRENT=#{pane_index}; tmux select-pane -t $(((CURRENT+1)%(MAX)))"
+#bind -n A-k run-shell "MAX=#{window_panes}; CURRENT=#{pane_index}; tmux select-pane -t $(((CURRENT+MAX-1)%(MAX)))"
 
 # Splitting window
-bind -n M-b split-window -h
+bind -n M-v split-window -h
 bind -n M-g split-window -v
+bind v split-window -h
+bind g split-window -v
 
 # tile windows
 bind -n M-t select-layout main-vertical
@@ -66,7 +73,7 @@ bind -n M-t select-layout main-vertical
 bind -n C-x kill-pane \; select-layout main-vertical
 
 # new terminal a'la dwm
-bind -n M-Space split-window \; select-layout main-vertical
+#bind -n A-Enter split-window \; select-layout main-vertical
 
 # rename window
 bind n command-prompt -I "#{window_name}" "rename-window '%%'"
