Made changes to tmux is_vim, added resize binds.

--- a/.tmux/bindings.conf
+++ b/.tmux/bindings.conf
@@ -35,7 +35,7 @@ bind-key C-a last-window
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 # Smart pane switching with awareness of vim splits
-is_vim='echo "#{pane_current_command}" | grep -iqE "(^|\/)g?(view|n?vim?)(diff)?$"'
+is_vim='~/bin/isvim "#{pane_current_command}"'
 bind -n M-h if-shell "$is_vim" "send-keys M-h" "select-pane -L"
 bind -n M-j if-shell "$is_vim" "send-keys M-j" "select-pane -D"
 bind -n M-k if-shell "$is_vim" "send-keys M-k" "select-pane -U"
@@ -77,6 +77,10 @@ bind -n C-x kill-pane \; select-layout main-vertical
 
 # rename window
 bind n command-prompt -I "#{window_name}" "rename-window '%%'"
+
+bind -n M-p resize-pane -R 20
+bind -n M-u resize-pane -L 20
+bind -n M-f resize-pane -Z
 
 bind -n M-1 run-shell "tmux select-window -t 1 >> /dev/null; if test \$? = 1; then tmux new-window -t 1; fi"
 bind -n M-2 run-shell "tmux select-window -t 2 >> /dev/null; if test \$? = 1; then tmux new-window -t 2; fi"
