--- a/.tmux/bindings.conf
+++ b/.tmux/bindings.conf
@@ -46,6 +46,15 @@ bind j select-pane -D
 bind k select-pane -U
 bind l select-pane -R
 
+# Mouse binds
+bind -n MouseDown1Pane select-pane -t= \; send-keys -M
+bind -n MouseUp1Pane select-pane -t= \; send-keys -M
+
+bind -n MouseDrag1Border resize-pane -t= -M
+bind -n MouseDrag3Pane resize-pane -t= -M
+bind -n MouseDown1Status select-window -t=
+
+
 # select-pane selects panes. -DLRU is down, left, right and up. -l is last.
 #bind -n A-l select-pane -L
 #bind -n A-k select-pane -U
