Tmux change window binds was sometimes changing window in other sessions. Fixed.

--- a/.tmux/bindings.conf
+++ b/.tmux/bindings.conf
@@ -91,14 +91,14 @@ bind -n M-p resize-pane -R 20
 bind -n M-u resize-pane -L 20
 bind -n M-f resize-pane -Z
 
-bind -n M-1 run-shell "tmux select-window -t 1 >> /dev/null; if test \$? = 1; then tmux new-window -t 1; fi"
-bind -n M-2 run-shell "tmux select-window -t 2 >> /dev/null; if test \$? = 1; then tmux new-window -t 2; fi"
-bind -n M-3 run-shell "tmux select-window -t 3 >> /dev/null; if test \$? = 1; then tmux new-window -t 3; fi"
-bind -n M-4 run-shell "tmux select-window -t 4 >> /dev/null; if test \$? = 1; then tmux new-window -t 4; fi"
-bind -n M-5 run-shell "tmux select-window -t 5 >> /dev/null; if test \$? = 1; then tmux new-window -t 5; fi"
-bind -n M-6 run-shell "tmux select-window -t 6 >> /dev/null; if test \$? = 1; then tmux new-window -t 6; fi"
-bind -n M-7 run-shell "tmux select-window -t 7 >> /dev/null; if test \$? = 1; then tmux new-window -t 7; fi"
-bind -n M-8 run-shell "tmux select-window -t 8 >> /dev/null; if test \$? = 1; then tmux new-window -t 8; fi"
-bind -n M-9 run-shell "tmux select-window -t 9 >> /dev/null; if test \$? = 1; then tmux new-window -t 9; fi"
+bind -n M-1 run-shell "tmux select-window -t #S:1 >> /dev/null; if test \$? = 1; then tmux new-window -t 1; fi"
+bind -n M-2 run-shell "tmux select-window -t #S:2 >> /dev/null; if test \$? = 1; then tmux new-window -t 2; fi"
+bind -n M-3 run-shell "tmux select-window -t #S:3 >> /dev/null; if test \$? = 1; then tmux new-window -t 3; fi"
+bind -n M-4 run-shell "tmux select-window -t #S:4 >> /dev/null; if test \$? = 1; then tmux new-window -t 4; fi"
+bind -n M-5 run-shell "tmux select-window -t #S:5 >> /dev/null; if test \$? = 1; then tmux new-window -t 5; fi"
+bind -n M-6 run-shell "tmux select-window -t #S:6 >> /dev/null; if test \$? = 1; then tmux new-window -t 6; fi"
+bind -n M-7 run-shell "tmux select-window -t #S:7 >> /dev/null; if test \$? = 1; then tmux new-window -t 7; fi"
+bind -n M-8 run-shell "tmux select-window -t #S:8 >> /dev/null; if test \$? = 1; then tmux new-window -t 8; fi"
+bind -n M-9 run-shell "tmux select-window -t #S:9 >> /dev/null; if test \$? = 1; then tmux new-window -t 9; fi"
 
 bind ":" command-prompt
