tmux: make 'isvim' stuff work with multiple vifm

--- a/.tmux/bindings.conf
+++ b/.tmux/bindings.conf
@@ -35,7 +35,7 @@ bind-key C-a last-window
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
 
 # Smart pane switching with awareness of vim splits
-is_vim='~/bin/isvim "#{pane_current_command}"'
+is_vim='~/bin/isvim "#{pane_pid}"'
 bind -n M-h if-shell "$is_vim" "send-keys M-h" "select-pane -L"
 bind -n M-j if-shell "$is_vim" "send-keys M-j" "select-pane -D"
 bind -n M-k if-shell "$is_vim" "send-keys M-k" "select-pane -U"
