--- a/.gitconfig
+++ b/.gitconfig
@@ -1,15 +1,24 @@
 [user]
-	name = Daniel Beecham
 	email = daniel@lunix.se
-
+	name = Daniel Beecham
+[push]
+	default = simple
+[color "status"]
+    added = blue
+    changed = green
+    untracked = dim black
+[color "diff"]
+    meta = dim black
+    frag = dim black
+    new = green
+    old = red
+    context = white
 [alias]
-	st = status
-	ci = commit
-	co = checkout
-	aa = add --all
-
-	l = "!. ~/.githelpers && pretty_git_log"
-	r = "!git l -30"
-
-[merge]
-	tool = vimdiff
+    l = log --graph --abbrev-commit --decorate --date=relative --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim black)- %an%C(reset)%C(bold yellow)%d%C(reset)' --all
+    ll = log --graph --abbrev-commit --decorate --date=relative --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim black)- %an%C(reset)%C(bold yellow)%d%C(reset)\n' --all --stat
+    s = status --short --branch --untracked-files=no
+    sa = status --short --branch
+    d = diff --color-words
+    a = add
+    c = commit
+    p = push
