--- a/.tmux/bindings.conf
+++ b/.tmux/bindings.conf
@@ -82,7 +82,7 @@ bind -n M-t select-layout main-vertical
 bind -n C-x kill-pane \; select-layout main-vertical
 
 # new terminal a'la dwm
-#bind -n A-Enter split-window \; select-layout main-vertical
+bind -n M-Space split-window \; select-layout main-vertical
 
 # rename window
 bind n command-prompt -I "#{window_name}" "rename-window '%%'"
@@ -100,5 +100,10 @@ bind -n M-6 run-shell "tmux select-window -t #S:6 >> /dev/null; if test \$? = 1;
 bind -n M-7 run-shell "tmux select-window -t #S:7 >> /dev/null; if test \$? = 1; then tmux new-window -t 7; fi"
 bind -n M-8 run-shell "tmux select-window -t #S:8 >> /dev/null; if test \$? = 1; then tmux new-window -t 8; fi"
 bind -n M-9 run-shell "tmux select-window -t #S:9 >> /dev/null; if test \$? = 1; then tmux new-window -t 9; fi"
+
+bind h swap-pane -d -t {left}
+bind l swap-pane -d -t {right}
+bind j swap-pane -d -t {down}
+bind k swap-pane -d -t {up}
 
 bind ":" command-prompt
