vifm: use C-q, not C-x, for kill window.

--- a/.tmux/bindings.conf
+++ b/.tmux/bindings.conf
@@ -79,7 +79,7 @@ bind -n M-t select-layout main-vertical
 # swap a'la dwm
 #bind -n C-Enter swap-pane -t 0 \; select-pane -t 0
 
-bind -n C-x kill-pane \; select-layout main-vertical
+bind -n C-q kill-pane \; select-layout main-vertical
 
 # new terminal a'la dwm
 bind -n M-Space split-window \; select-layout main-vertical
