--- a/.config/i3/config
+++ b/.config/i3/config
@@ -9,7 +9,7 @@
 #
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
-set $mod Mod4
+set $mod Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -31,7 +31,7 @@ font -misc-fixed-medium-r-normal--11-*-*-*-*-*-iso10646-1
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec ~/bin/term
+bindsym $mod+Return exec /usr/bin/urxvt
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -91,7 +91,7 @@ bindsym $mod+space focus mode_toggle
 bindsym $mod+a focus parent
 
 # focus the child container
-#bindsym $mod+d focus child
+bindsym $mod+d focus child
 
 # switch to workspace
 bindsym $mod+1 workspace 1
@@ -116,6 +116,19 @@ bindsym $mod+Shift+7 move container to workspace 7
 bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
+
+bindsym $mod+comma focus output DVI-D-0
+bindsym $mod+period focus output HDMI-0
+bindsym $mod+minus focus output DP-1
+
+bindsym $mod+control+k focus output up
+bindsym $mod+control+j focus output down
+bindsym $mod+control+h focus output left
+bindsym $mod+control+l focus output right
+
+bindsym $mod+m exec i3-input -F 'mark %s' -l 1 -P 'mark: '
+bindsym $mod+n exec i3-input -F '[con_mark=%s] focus' -l 1 -P 'goto: '
+
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
