i3: switch screen binds

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -117,8 +117,8 @@ bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
 
-bindsym $mod+comma focus output DVI-D-0
-bindsym $mod+period focus output HDMI-0
+bindsym $mod+comma focus output HDMI-0
+bindsym $mod+period focus output DVI-D-0
 bindsym $mod+minus focus output DP-1
 
 bindsym $mod+control+k focus output up
