--- a/.config/i3/config
+++ b/.config/i3/config
@@ -9,7 +9,7 @@
 #
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
-set $mod Mod1
+set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -117,8 +117,8 @@ bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
 bindsym $mod+Shift+0 move container to workspace 10
 
-bindsym $mod+comma focus output HDMI-0
-bindsym $mod+period focus output DVI-D-0
+bindsym $mod+comma focus output DVI-D-0
+bindsym $mod+period focus output HDMI-0
 bindsym $mod+minus focus output DP-1
 
 bindsym $mod+control+k focus output up
