tmux: bindings for detach, home, end, rename window

--- a/.tmux/bindings.conf
+++ b/.tmux/bindings.conf
@@ -11,7 +11,12 @@ unbind-key -a
 # if -n is specified, command is bound to key alone, without prefix.
 
 # Change prefix to ctrl-a
-set-option -g prefix C-a
+set-option -g prefix C-b
+
+
+# home, end
+bind -n End send-key C-e
+bind -n Home send-key C-a
 
 # turns on vi-mode in copy and choice modes
 #mode-keys vi
@@ -28,8 +33,8 @@ set-option -g prefix C-a
 # bind-key "'" new-window
 # if -n is specified, command is bound to key alone, without prefix.
 
-# C-a C-a -> last window
-bind-key C-a last-window
+# C-b C-b -> last window
+bind-key C-b last-window
 
 # reload config
 bind r source-file ~/.tmux.conf \; display-message "Config reloaded..."
@@ -85,7 +90,10 @@ bind -n C-q kill-pane \; select-layout main-vertical
 bind -n M-Space split-window \; select-layout main-vertical
 
 # rename window
-bind n command-prompt -I "#{window_name}" "rename-window '%%'"
+bind '"' command-prompt -I "#{window_name}" "rename-window '%%'"
+
+# detach
+bind d detach-client
 
 bind -n M-p resize-pane -R 20
 bind -n M-u resize-pane -L 20
