tmux: rename session on n

--- a/.tmux/bindings.conf
+++ b/.tmux/bindings.conf
@@ -92,6 +92,9 @@ bind -n M-Space split-window \; select-layout main-vertical
 # rename window
 bind '"' command-prompt -I "#{window_name}" "rename-window '%%'"
 
+# rename window
+bind n command-prompt -I "#{session_name}" "rename-session '%%'"
+
 # detach
 bind d detach-client
 
