add move window commands

--- a/.tmux/bindings.conf
+++ b/.tmux/bindings.conf
@@ -92,7 +92,7 @@ bind -n M-Space split-window \; select-layout main-vertical
 # rename window
 bind '"' command-prompt -I "#{window_name}" "rename-window '%%'"
 
-# rename window
+# rename session
 bind n command-prompt -I "#{session_name}" "rename-session '%%'"
 
 # detach
@@ -111,6 +111,18 @@ bind -n M-6 run-shell "tmux select-window -t #S:6 >> /dev/null; if test \$? = 1;
 bind -n M-7 run-shell "tmux select-window -t #S:7 >> /dev/null; if test \$? = 1; then tmux new-window -t 7; fi"
 bind -n M-8 run-shell "tmux select-window -t #S:8 >> /dev/null; if test \$? = 1; then tmux new-window -t 8; fi"
 bind -n M-9 run-shell "tmux select-window -t #S:9 >> /dev/null; if test \$? = 1; then tmux new-window -t 9; fi"
+
+bind 1 run-shell "tmux join-pane -t #S:1 >> /dev/null; if test \$? = 1; then tmux break-pane -t #S:1; if test \$? = 1; then tmux move-window -t #S:1; fi; fi;"
+bind 2 run-shell "tmux join-pane -t #S:2 >> /dev/null; if test \$? = 1; then tmux break-pane -t #S:2; if test \$? = 1; then tmux move-window -t #S:2; fi; fi;"
+bind 3 run-shell "tmux join-pane -t #S:3 >> /dev/null; if test \$? = 1; then tmux break-pane -t #S:3; if test \$? = 1; then tmux move-window -t #S:3; fi; fi;"
+bind 4 run-shell "tmux join-pane -t #S:4 >> /dev/null; if test \$? = 1; then tmux break-pane -t #S:4; if test \$? = 1; then tmux move-window -t #S:4; fi; fi;"
+bind 5 run-shell "tmux join-pane -t #S:5 >> /dev/null; if test \$? = 1; then tmux break-pane -t #S:5; if test \$? = 1; then tmux move-window -t #S:5; fi; fi;"
+bind 6 run-shell "tmux join-pane -t #S:6 >> /dev/null; if test \$? = 1; then tmux break-pane -t #S:6; if test \$? = 1; then tmux move-window -t #S:6; fi; fi;"
+bind 7 run-shell "tmux join-pane -t #S:7 >> /dev/null; if test \$? = 1; then tmux break-pane -t #S:7; if test \$? = 1; then tmux move-window -t #S:7; fi; fi;"
+bind 8 run-shell "tmux join-pane -t #S:8 >> /dev/null; if test \$? = 1; then tmux break-pane -t #S:8; if test \$? = 1; then tmux move-window -t #S:8; fi; fi;"
+bind 9 run-shell "tmux join-pane -t #S:9 >> /dev/null; if test \$? = 1; then tmux break-pane -t #S:9; if test \$? = 1; then tmux move-window -t #S:9; fi; fi;"
+
+bind-key C-Tab command-prompt -p "join pane from:"  "join-pane -s '%%'"
 
 bind h swap-pane -d -t {left}
 bind l swap-pane -d -t {right}
