M-x för att döda en pane i tmux.
Behövs alltid, naturligtvis. Har inget annat sätt att döda buggade
terminaler.

--- a/.tmux/bindings.conf
+++ b/.tmux/bindings.conf
@@ -78,6 +78,8 @@ bind -n M-g split-window -v
 bind v split-window -h
 bind g split-window -v
 
+bind -n M-x kill-pane
+
 # tile windows
 bind -n M-t select-layout main-vertical
 
