git: move-head-to, reset-index, move-branch

--- a/.gitconfig
+++ b/.gitconfig
@@ -26,3 +26,6 @@
     ss = status
     co = checkout
     t = tag
+    move-head-to = reset --soft
+    reset-index = reset --mixed HEAD
+    move-branch = branch -f
