tmux: set titles
Makes it possible to rescuetime/arbtt to catch more then 'tmux'

--- a/.tmux/environment.conf
+++ b/.tmux/environment.conf
@@ -31,3 +31,7 @@ set -g base-index 1
 # if it is part of a function or meta key sequences. I don't use these, and tmux
 # feels unresponsive with it.
 set -s escape-time 0
+
+# set titles to make it possible for rescuetime/arbtt to catch action
+set -g set-titles on
+set -g set-titles-string 'tmux: #S (#W)'
