--- a/.vimperatorrc
+++ b/.vimperatorrc
@@ -7,4 +7,4 @@ nnoremap K 30k
 nnoremap <A-i> :tabprevious<cr>
 nnoremap <A-o> :tabnext<cr>
 
-set gui=addons,nobookmarks,nomenu,nonavigation,tabs
+set gui=addons,nobookmarks,nomenu,navigation,tabs
